tweaked layout bugs

--- a/website/_css/colour/_code.css
+++ b/website/_css/colour/_code.css
@@ -1,3 +1,7 @@
+pre{
+    margin-bottom: 20px;
+}
+
 pre > code {
     padding: 10px;
     border-radius: 0;
